--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,11 @@
 - [ ] Make sure things are at least a little faster again for large files.
    - In a perfect world, we'd only re-highlight the paragraphs that have changed...
    - As a workaround, we could either highlight code blocks asynchronously, or do it when typing stops?
-- [ ] Link checker
+- [x] Link checker
 - [ ] Come up with a good (defined) scheme for fence names
 - [ ] Auto-completion/formatting using SourceKitten?
 - [ ] "Halt on Error" checkmark menu item that halts when an error happens
-- [ ] Have a way to mark certain swift blocks as non-executable
+- [x] Have a way to mark certain swift blocks as non-executable
 - [ ] Have multiple "sessions" within a file
 - [ ] Search (and replace)
 - [ ] Reload the file when it has changed on disk (override NSDocument's presentedItemDidChange)
