--- a/todo.txt
+++ b/todo.txt
@@ -5,9 +5,15 @@
 - [ ] Come up with a good (defined) scheme for fence names
 - [ ] Auto-completion/formatting using SourceKitten?
 - [ ] "Halt on Error" checkmark menu item that halts when an error happens
+- [x] Have a way to mark certain swift blocks as non-executable
+- [ ] Have a way to mark a block (or better: a line) as expecting to yield a compiler error.
 - [ ] Have multiple "sessions" within a file
 - [ ] Search (and replace)
 - [ ] Have an (optional?) clickable outline-view of the document on the left-hand-side of the splitview.
 - [ ] Parse yaml preamble?
 - [ ] Allow for a way to have "rich" results. Maybe we could do something with HTML?
 - [ ] Allow for multi-line expressions. Maybe we could simulate the down arrow somehow.
+- [ ] Spell checker
+- [ ] Highlight nested code blocks (e.g. in blockquotes)
+- [x] Have a way to go back to the source code from an error in the console (could be a link)
+- [x] Something is wrong with conforming to certain protocols (e.g. list and ExpressibleByArrayLiteral).
